<resources>
    <string name="app_name">TrendLog</string>
    <string name="Welcome">Welcome</string>
    <string name="Navn">Skriv dit navn</string>
    <string name="Efternavn">Skriv dit Efternavn</string>
    <string name="NavnOgEfternavn">Du hedder:</string>
    <string name="nxtpage">Næste side</string>
    <string name="press_me">Press me</string>
    <string name="videre">Videre</string>
    <string name="modeller_ind">Her skal vi have nogle modeller ind:</string>
    <string name="CarColor">Color:</string>
    <string name="CarTopSpeed">Top Speed:</string>
    <string name="CarModel">Car Model:</string>
</resources>
