<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="12dp">

    <TextView
        android:id="@+id/CarModelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/CarModel"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/CarColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CarColor"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/CarModelName"
        app:layout_constraintTop_toBottomOf="@+id/CarModelName" />

    <TextView
        android:id="@+id/CarTopSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CarTopSpeed"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/CarColor"
        app:layout_constraintTop_toBottomOf="@+id/CarColor" />

    <TextView
        android:id="@+id/CarModelData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/CarModelName"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="test" />

    <TextView
        android:id="@+id/CarColorData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        app:layout_constraintStart_toEndOf="@+id/CarColor"
        app:layout_constraintTop_toBottomOf="@+id/CarModelData"
        tools:text="test" />

    <TextView
        android:id="@+id/CarSpeedData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        app:layout_constraintStart_toEndOf="@+id/CarTopSpeed"
        app:layout_constraintTop_toBottomOf="@+id/CarColorData"
        tools:text="test" />
</androidx.constraintlayout.widget.ConstraintLayout>